# cem-concept-discovery

./: .gitattributes  .gitignore  README.md  generate_awa_splits.py  generate_imagenet_splits.py  generate_shapes_dataset.py  pyproject.toml  run_baselines.sh  run_experiments.sh  run_foundation_models_imagenet.py  shapes_dataset.pkl
baselines/: run_labelfree_baseline.py  run_pcbm_baseline.py
baselines/label_free/: README.md  cbm.py  data_utils.py  similarity.py  train_cbm.py  utils.py
baselines/post_hoc/: README.md  learn_concepts_multimodal.py  train_pcbm.py  train_pcbm_h.py
cemcd/: concept_discovery.py  hisae.py  metrics.py  sae.py  training.py  turtle.py
cemcd/data/: __init__.py  awa.py  base.py  celeba.py  cifar100.py  cub.py  dsprites.py  imagenet.py  kitchens.py  mnist.py  shapes.py  transforms.py
cemcd/models/: base.py  black_box.py  cbm.py  cem.py  clustercem.py  deep_hicem.py  hicem.py  inthicem.py  linear.py  otherhicem.py  pre_concept_models.py  resnet_decoder.py  vade.py
experiments/: calculate_cbm_interventions.py  choose_n_clusters.py  experiment_utils.py  mnist.ipynb  mnist_prototypes.ipynb  pretrain_models.py  run.py  run_baselines.py  run_experiment.py  run_simple_baselines.py
experiments/configs/: awa.yaml  celeba.yaml  cifar100.yaml  cub.yaml  cub_clustercem.yaml  dsprites.yaml  dsprites_clustercem.yaml  imagenet.yaml  kitchens.yaml  mnist_add.yaml  mnist_add_clustercem.yaml  mnist_add_continuous_labels.yaml  shapes.yaml
results_explorer/: results_explorer.py
results_explorer/static/: sidebars.css
results_explorer/templates/: run.html  (+2 more)
(+5 files in other folders)
