[project]
name = "cemcd"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.1",
    "lightning>=2.2.1",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
    "torchvision>=0.17.1",
    "matplotlib>=3.8.2",
    "Pillow>=10.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cemcd"]
exclude = []
namespaces = false
