[project]
name = "cemcd"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.4",
    "torchvision>=0.24.0",
    "matplotlib>=3.10.7",
    "Pillow>=12.0.0",
    "wandb>=0.22.3",
    "PyYAML>=6.0.3",
    "tqdm>=4.67.1",
    "pytorchcv>=0.0.73",
    "nltk>=3.9.2",
    "OpenEXR>=3.4.3",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cemcd"]
exclude = []
namespaces = false
